# MODOKLIM_WL

./: BB_cropmap.asc  crop_WL.json  crop_WL_SP.json  flush-queue.py  pyproject.toml  run-consumer-plot-90-points-only.py  run-consumer-plot-to-soil.py  run-consumer.py  run-producer-90-points-only .py  run-producer-90-points-only.py  run-producer-plot-to-soil.py  run-producer.py  sim_WL.json  sim_WL_SP.json  sim_setups_SG.csv  sim_setups_SG_SP.csv  site_WL.json
data/germany/: BRA-crop-wr_100_25832_etrs89-utm32n.asc.aux.xml  BRA-crop-wr_100_25832_etrs89-utm32n.asc.ovr  Bossen-buek200_100_25832_etrs89-utm32n.asc  Bossen-dem-wr_100_25832_etrs89-utm32n.asc  Bossen-slope-wr_100_25832_etrs89-utm32n.asc  Cropmap2023_1000_25832_etrs89-utm32n.asc  Final_Hermes_Soil.csv  Final_Hermes_Soil_25832.csv  GermA_2023_100_25832_etrs89-utm32n.asc  Germany-Cropmap2023_1000_25832_etrs89-utm32n.asc  Germany_Cropmap2023_1000_25832_etrs89-utm32n.asc  Germany_Cropmap2023_100_25832_etrs89-utm32n.asc  Herm-buek-wr_100_25832_etrs89-utm32n.asc  Herme-buek-wr_100_25832_etrs89-utm32n.asc  Hermes-buek-wr_100_25832_etrs89-utm32n.asc  Hermes-crop-wr_100_25832_etrs89-utm32n.asc  Hermes-dem-wr_5_25832_etrs89-utm32n.asc  Hermes-slope-wr_100_25832_etrs89-utm32n.asc  Hermes-slope-wr_5_25832_etrs89-utm32n.asc  HermesSoil.csv  MOL-buek-wr_100_25832_etrs89-utm32n.asc  MOL-buek-wr_100_25832_etrs89-utm32n.prj  MOL-crop-wr_100_25832_etrs89-utm32n.asc  MOL-crop-wr_100_25832_etrs89-utm32n.asc.aux.xml  MOL-crop-wr_100_25832_etrs89-utm32n_25833.tif  (+31 more)
zalfmas_common/: common.py  rect_ascii_grid_management.py
(+622 files in other folders)
