[tool.poetry]
name = "modoklim-wl"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyproj = "^3.7.0"
zalfmas-common = "^0.1.8"
pyzmq = "^26.2.0"
geopandas = "^1.0.1"
rasterio = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
